clean up bench and get it all ready

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ implementations/*/data
 implementations/*/images*
 implementations/*/doe*
 implementations/*/saved_models
-
+doe
 __pycache__
 
 venv
